# thumbnail-generator-fastapi

./: .env  .flake8  .gitignore  Pipfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  start_celery_worker.sh  start_fastapi.sh  start_flower.sh  tox.ini
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  celery_status.py  root.py  wms_thumbnail.py
app/celery_worker/: __init__.py  app.py  celeryconfig.py
app/celery_worker/tasks/: __init__.py  wms_thumbnail_generate.py
app/core/: config.py  logging.py  setup.py
app/models/: thumbnail_request.py  thumbnail_response.py  wms_thumbnail.py
app/util/: path_utils.py
docker/nginx/: default.cfg
tests/: conftest.py
tests/integration/: test_celery_task.py  test_get_status.py  test_wms_thumbnail_api.py
tests/unit/: test_models.py  test_path_utils.py  test_root.py
